apps/hello-gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-app
    version: v1
  name: demo-app
  # namespace: demo-gitops
spec:
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: quay.io/lcherri/demo-app-servicemesh:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
