apps/hello-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  # namespace: demo-gitops
  labels:
    app: demo-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-app
