apps/hello-gitops/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
  # namespace: demo-gitops
  labels:
    app: demo-app
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: demo-app
